[package]
name = "spritegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.23"
exitcode = "1.1.2"
rayon = "1.7.0"
spreet = "0.8.0"
xmltree = "0.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5.4"